--- a/css/fonts.css
+++ b/css/fonts.css
@@ -26,8 +26,43 @@
     src: url('../fonts/subset-AvenirNextLTPro-Demi.eot?#iefix') format('embedded-opentype'),
         url('../fonts/subset-AvenirNextLTPro-Demi.woff2') format('woff2'),
         url('../fonts/subset-AvenirNextLTPro-Demi.woff') format('woff');
-    font-weight: 1000;
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
 
+
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?ah56w4');
+  src:  url('../fonts/icomoon.eot?ah56w4#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?ah56w4') format('truetype'),
+    url('../fonts/icomoon.woff?ah56w4') format('woff'),
+    url('../fonts/icomoon.svg?ah56w4#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-house:before {
+  content: "\e900";
+}
+.icon-commercial:before {
+  content: "\e901";
+}
