--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 
 /*Specification*/
 
+*{
+	box-sizing: border-box;
+}
 
 *:focus {
 	outline: none !important;
@@ -16,18 +19,20 @@ body{
 	padding: 0;
 	margin: 0;
 	letter-spacing: 0.02em;
-	font-size: 24px;
-	color: #fff;
+	font-size: 14px;
+	color: #b4b4b4;
 	transition: all 0.5 ease;
 	font-weight: 100;
 	line-height: 1.5em;
+	background-color: #fff;
+	overflow-x: hidden;
 }
 
 .container{
 	margin: 0 auto;
-	padding: 0;
+	padding: 0 25px;
 	max-width: 1170px;
-	width: 95%;
+	width: 100%;
 	height: 100%;
 }
 
@@ -45,9 +50,11 @@ h1, h2, h3, h4, h5, h6, p{
 	margin: 0;
 	padding: 0;
 	line-height: 1.2em;
-	color: #fff;
-	font-weight: 400;
 	text-align: center;
+}
+
+p{
+	text-align: left;
 }
 
 h1{
@@ -60,13 +67,14 @@ h1{
 
 h2{
 	font-size: 30px;
-	color: #20203a;
+	color: #273164;
+	text-align: left;
 }
 
 h3{
 	font-size: 24px;
 	color: #fff;
-	font-weight: Demi;
+	font-weight: 600;
 }
 
 
@@ -74,6 +82,8 @@ h3{
 h4{
 	font-size: 13px;
 	font-weight: 400;
+	text-transform: uppercase;
+	color: #f45e1f;
 }
 
 /*h5{
@@ -90,36 +100,15 @@ a, a:hover, a:active{
 .btn{
 	color: #f45e1f;
 	font-size: 15px;
-	font-weight: 1000;
+	font-weight: 600;
 	background-color: #fff9f6;
   	border-radius: 20px;
 	cursor: pointer;
-	transition: all 0.5s ease;
   	line-height: 1.2;
   	width: 160px;
 	height: 45px;
 	text-align: center;
 	line-height: 45px;
-}
-
-.d-flex{
-	display: flex;
-}
-
-.align-center{
-	align-items: center;
-}
-
-.space-between{
-	justify-content: space-between;
-}
-
-.space-around{
-	justify-content: space-around;
-}
-
-.text-center{
-	text-align: center;
 }
 
 
@@ -136,37 +125,27 @@ header{
 	background-position: center;
 }
 
-.header__container{
+header .container{
+	display: flex;
+	justify-content: space-between;
 	flex-direction: column;
 }
 
 .head{
+	display: flex;
+	justify-content: space-between;
 	align-items: center;
 }
 
-.logo{
-
+.nav__list {
+	display: flex;
+	justify-content: space-between;
 }
-
-.logo__img{
-
-}
-
-.nav__list{
-
-}
-
-.nav__item{
-	
-}
-
-.nav__link{
+.nav__link {
 	font-size: 15px;
-	font-weight: 1000;
+	font-weight: 600;
 	padding: 30px;
 }
-
-.request{}
 
 .offer{
 	width: 700px;
@@ -201,6 +180,7 @@ header{
 }
 
 .learn{
+	display: flex;
 	margin-left: 6%;
 	width: 65%;
 	align-items: center;
@@ -225,7 +205,7 @@ header{
 .learn__text{
 	margin-right: 5%;
 	font-size: 12px;
-	font-weight: 1000;
+	font-weight: 600;
 	text-transform: uppercase;
 }
 
@@ -259,7 +239,7 @@ header{
 	text-transform: uppercase;
 	font-size: 12px;
 	line-height: 48px;
-	font-weight: 1000;
+	font-weight: 600;
 	height: 48px;
 	color: #b4b4b4;
 }
@@ -271,143 +251,355 @@ header{
 }
 
 
+/*Cleaning*/
+
+.cleaning {
+	background-color: #fafbfd;
+	padding: 100px 0 150px;
+}
+.cleaning .container {
+	max-width: 735px;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 0 5px;
+
+}
+.cleaning__item {
+	flex: 0 1 330px;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	padding: 35px;
+	margin-right: 10px;
+	transition: all .2s ease;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.cleaning__item:last-child {
+	margin: 0;
+}
+
+.cleaning__item:hover {
+	background-color: #273164;
+}
+
+.cleaning__icon {
+	color: #f45e1f;
+	font-size: 53px;
+}
+
+.cleaning__item:hover .cleaning__icon {
+	color: #fff;
+}
+
+.cleaning__item h3{
+	color: #273164;
+	margin: 15px 0 10px 0;
+}
+
+.cleaning__item:hover h3 {
+	color: #fff;
+}
+
+.cleaning__text {
+	font-size: 14px;
+	line-height: 20px;
+	margin-bottom: 20px;
+}
+
+.cleaning__item:hover .cleaning__text {
+	color: #fff;
+}
+
+.cleaning__btn {
+	color: #f45e1f;
+	border-bottom: #f45e1f solid 1px;
+	opacity: 0.9;
+	font-size: 13px;
+	align-self: flex-start;
+	line-height: 17px;
+}
+
+.cleaning__btn:hover {
+	color: #fff;
+	border-bottom-color: #fff; 
+}
+
+
+/*==========================================*/
+
+	/*Way*/
+
+.way {
+	padding: 130px 0 150px;
+}
+.way .container {
+
+}
+.way__title {
+	text-align: left;
+	margin-bottom: 20px;
+}
+.way__content {
+	display: flex;
+	justify-content: space-between;
+}
+.way__content__column {
+	margin-right: 50px;
+	flex: 0 1 435px;
+}
+
+.way__content__column:last-child{
+	margin: 0;
+}
+
+.way__content__column p {
+	margin-bottom: 20px;
+}
+
+.way__content__column p:last-child {
+	margin: 0;
+}
+
+
+/*==========================================*/
+
+	/*Become*/
+
+
+.become {
+	background-color: #f6f7fb;
+	padding-bottom: 85px;
+}
+.become__content {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	max-width: 440px;
+}
+
+.become__content::after {
+	position: absolute;
+	right: 0;
+	content: " ";
+	background-image: url(../img/become-decorative-img.png);
+	background-repeat: no-repeat;
+	background-position: right center;
+	width: calc(100vw - 495px);
+	height: 688px;
+	background-color: transparent;
+	pointer-events: none;
+}
+
+.become__img {
+	flex: 0 1 100%;
+	margin-bottom: 80px;
+	margin-top: -100px;
+}
+.become-img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	   object-fit: cover;
+}
+.become__title {
+	margin-bottom: 20px;
+}
+.become__subtitle {
+	margin-bottom: 20px;
+}
+.become__text {
+	margin-bottom: 30px;
+	color: #676f92;
+}
+.become__text > span {
+	font-weight: 600;
+}
+.become__advantages {}
+.become__advantages__item {
+	margin-bottom: 15px;
+	padding-left: 45px;
+	background-image: url(../img/check-icon.png);
+	background-repeat: no-repeat;
+	background-position: left center;
+	font-weight: 600;
+	color: #273164;
+}
+
+
+@media(max-width: 1170px) {
+
+
+	/*Become*/
+
+	.become__content::after {
+		background-position: left center;
+	}
+}
+
 @media screen and (max-width: 1030px){
 
 
-		/*Header*/
-
+	/*Header*/
 
 	.nav__link{
 		padding: 15px;
 	}
 }
 
-
-
 @media screen and (max-width: 860px){
 
 
 	/*Header*/
 
+	
+	/* стилизуем кнопку */
+	/* скрываем чекбокс */
+	#menu__toggle {
+	  opacity: 0;
+	}
+	/* стилизуем кнопку */
+	.menu__btn {
+	  display: flex; /* используем flex для центрирования содержимого */
+	  align-items: center;  /* центрируем содержимое кнопки */
+	  position: fixed;
+	  top: 20px;
+	  left: 20px;
+	  width: 26px;
+	  height: 26px;
+	  cursor: pointer;
+	  z-index: 1;
+	}
+	/* добавляем "гамбургер" */
+	.menu__btn > span,
+	.menu__btn > span::before,
+	.menu__btn > span::after {
+	  display: block;
+	  position: absolute;
+	  width: 100%;
+	  height: 2px;
+	  background-color: #26EFDD;
+	    transition-duration: .25s;
+	}
+	.menu__btn > span::before {
+	  content: '';
+	  top: -8px;
+	}
+	.menu__btn > span::after {
+	  content: '';
+	  top: 8px;
+	}
+	
+	
+	
+	/* контейнер меню */
+	nav {
+	  display: block;
+	  position: fixed;
+	  visibility: hidden;
+	  top: 0;
+	  left: -100%;
+	  width: 300px;
+	  height: 100%;
+	  margin: 0;
+	  padding: 80px 0;
+	  list-style: none;
+	  text-align: center;
+	  background-color: #ECEFF1;
+	  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+	  transition-duration: .25s;
+	}
+	
+	.nav__list{
+		display: block;
+		height: 100%;
+	}
+	/* элементы меню */
+	.nav__item {
+		align-items: center;
+		width: 100%;
+		color: #555;
+		font-size: 16vh;
+		transition-duration: .25s;
+	}
+	.nav__item:hover {
+	  background-color: #CFD8DC;
+	}
+	
+	.nav__link{
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+	
+	#menu__toggle:checked ~ .menu__btn > span {
+	  transform: rotate(45deg);
+	}
+	#menu__toggle:checked ~ .menu__btn > span::before {
+	  top: 0;
+	  transform: rotate(0);
+	}
+	#menu__toggle:checked ~ .menu__btn > span::after {
+	  top: 0;
+	  transform: rotate(90deg);
+	}
+	#menu__toggle:checked ~ nav {
+	  visibility: visible;
+	  left: 0;
+	}
+	
+	.offer{
+		width: 100%;
+		margin: auto;
+	}
+	h1{
+		text-align: center;
+		font-size: 8vw;
+		line-height: 7vw;
+		margin-bottom: 20px;
+	}
+	
+	.learn{
+		margin-top: 1%;
+		margin-bottom: 10%;
+	}
+	
+	.learn__line{
+		width: 15vw;
+	}
+}
 
-/* стилизуем кнопку */
-/* скрываем чекбокс */
-#menu__toggle {
-  opacity: 0;
-}
-/* стилизуем кнопку */
-.menu__btn {
-  display: flex; /* используем flex для центрирования содержимого */
-  align-items: center;  /* центрируем содержимое кнопки */
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  width: 26px;
-  height: 26px;
-  cursor: pointer;
-  z-index: 1;
-}
-/* добавляем "гамбургер" */
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #26EFDD;
-    transition-duration: .25s;
-}
-.menu__btn > span::before {
-  content: '';
-  top: -8px;
-}
-.menu__btn > span::after {
-  content: '';
-  top: 8px;
-}
+@media screen and (max-width: 705px){
 
 
+	/*Cleaning*/
 
-/* контейнер меню */
-nav {
-  display: block;
-  position: fixed;
-  visibility: hidden;
-  top: 0;
-  left: -100%;
-  width: 300px;
-  height: 100%;
-  margin: 0;
-  padding: 80px 0;
-  list-style: none;
-  text-align: center;
-  background-color: #ECEFF1;
-  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-  transition-duration: .25s;
-}
+	.cleaning .container {
+		justify-content: center;
+	}
 
-.nav__list{
-	display: block;
-	height: 100%;
-}
-/* элементы меню */
-.nav__item {
-	align-items: center;
-	width: 100%;
-	color: #555;
-	font-size: 16vh;
-	transition-duration: .25s;
-}
-.nav__item:hover {
-  background-color: #CFD8DC;
-}
-
-.nav__link{
-	display: block;
-	width: 100%;
-	height: 100%;
-}
-
-#menu__toggle:checked ~ .menu__btn > span {
-  transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-  top: 0;
-  transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
-#menu__toggle:checked ~ nav {
-  visibility: visible;
-  left: 0;
-}
-
-.offer{
-	width: 100%;
-	margin: auto;
-}
-h1{
-	text-align: center;
-	font-size: 8vw;
-	line-height: 7vw;
-	margin-bottom: 20px;
-}
-
-.learn{
-	margin-top: 1%;
-	margin-bottom: 10%;
-}
-
-.learn__line{
-	width: 15vw;
-}
-
-}
+	.cleaning__item {
+		margin-bottom: 30px;
+		padding: 25px;
+	}
 
 
+	/*Become*/
+
+	.become__content::after {
+		display: none;
+	}
+
+	.become__content {
+		margin: 0 auto;
+	}
+}
+
+/*@media (max-width: 650px) {
+}
+*/
 @media screen and (max-width: 500px){
 
 
@@ -432,4 +624,16 @@ h1{
 		margin: 20px auto 0 auto;
 	}
 
+
+	/*Way*/
+
+	.way__content {
+		flex-direction: column;
+	}
+
+	.way__content__column {
+		flex: 1 1 auto;
+		margin: 0 0 35px 0;
+	}
+}
 }
