--- a/css/style.css
+++ b/css/style.css
@@ -468,8 +468,12 @@ header .container{
 	}
 
 	.btn-request {
-		position: absolute;
-		right: 0;
+		position: static;
+		display: block;
+		margin: 0 auto;
+		margin-top: 10px;
+/*		position: absolute;
+		right: 0;*/
 	}
 	/* стилизуем кнопку */
 	/* скрываем чекбокс */
@@ -513,7 +517,8 @@ header .container{
 	
 	/* контейнер меню */
 	nav {
-	  display: block;
+	  display: flex;
+	  flex-direction: column;
 	  position: fixed;
 	  top: 0;
 	  left: -300px;
@@ -525,11 +530,12 @@ header .container{
 	  background-color: #ECEFF1;
 	  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
 	  border-right: 10px solid #f45e1f;
+	  overflow-y: scroll;
 	}
 	
 	.nav__list{
+		flex: 1 1 auto;
 		display: block;
-		height: 100%;
 	}
 	/* элементы меню */
 	.nav__item {
