--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ a, a:hover, a:active{
 	}
 
 header{
-	background-image: url(../img/header-bg.png);
+	background-image: url(../img/header-bg.jpg);
 	background-repeat: no-repeat;
 	background-color: #bbb;
 	height: 100vh;
