--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@
 
 body{
 	font-family: "Avenir Next LT Pro", "Arial", sans-serif;
+	padding: 0;
+	margin: 0;
 	letter-spacing: 0.02em;
 	font-size: 14px;
 	color: #b4b4b4;
@@ -23,11 +25,7 @@ body{
 	font-weight: 100;
 	line-height: 1.5em;
 	background-color: #fff;
-	width: 100vw;
 	overflow-x: hidden;
-
-	margin: 0;
-	padding: 0 15px 0 0; /*Отступ от полосы прокрутки*/
 }
 
 .container{
@@ -92,7 +90,7 @@ h4{
 	font-size: 15px;
 	color: #fff;
 	font-weight: 800;
-}
+}*/
 
 a, a:hover, a:active{
 	text-decoration: none;
@@ -115,6 +113,11 @@ a, a:hover, a:active{
 
 
 /*Header*/
+	body {
+
+		width: 100vw;
+		overflow-x: hidden;
+	}
 
 header{
 	background-image: url(../img/header-bg.jpg);
@@ -653,3 +656,4 @@ header .container{
 	}
 }
 }
+
