--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 body{
 	font-family: "Avenir Next LT Pro", "Arial", sans-serif;
-	padding: 0;
+	padding: 0 15px 0 0;
 	margin: 0;
 	letter-spacing: 0.02em;
 	font-size: 14px;
@@ -124,7 +124,7 @@ header{
 	background-repeat: no-repeat;
 	background-color: #bbb;
 	height: 100vh;
-	width: 100vw;
+	width: calc(100vw - 15px);
 	background-size: cover;
 	background-position: center;
 }
@@ -436,6 +436,274 @@ header .container{
 }
 
 
+/*=================================================*/
+	/*Book*/
+
+.book {
+	padding: 160px 0;
+	position: relative;
+}
+
+.book .container {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.book__column {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.book__column:first-child {
+	max-width: 370px;
+	width: 100%;
+}
+
+.book__column:last-child {
+	max-width: 500px;
+	width: 100%;
+	background-color: #273164;
+	padding: 50px 75px;
+	color: #fff;
+	font-size: 12px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.book__column h4 {
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+
+.book__text {
+	flex: 1 1 auto;
+	padding: 50px 0 65px 0;
+	color: #676f92;
+}
+
+.book__type {
+	-ms-grid-row-align: stretch;
+	    align-self: stretch;
+	margin-bottom: 50px;
+}
+
+.type__text {
+	color: #f45e1f;
+	font-size: 14px;
+	font-weight: 600;
+	margin-bottom: 15px;
+}
+
+.type__radio {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.book__type input {
+	position: absolute;
+	width: 0;
+	height: 0;
+	opacity: 0;
+	z-index: -10;
+	pointer-events: none;
+}
+.book__type input + label{
+	display: block;
+	color: #666e91;
+	font-size: 15px;
+	font-weight: 600;
+	width: 160px;
+	min-height: 45px;
+	border: 2px solid #d1d3de;
+	border-radius: 30px;
+	background-color: transparent;
+	text-align: center;
+	line-height: 45px;
+	cursor: 	pointer;
+}
+
+.book__type label:last-child {
+	margin: 0 10px 0 10px;
+}
+.book__type input:checked + label{
+	color: #f45e1f;
+	border-color: #fbc7b1;
+	background-color: #fff9f6;
+}
+
+.book__number {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	-ms-grid-row-align: stretch;
+	    align-self: stretch;
+	margin-right: 20px;
+}
+.number__item {
+	flex: 0 0 150px;
+	display: flex;
+	flex-direction: column;
+}
+.number__text {
+	color: #f45e1f;
+	font-size: 14px;
+	font-weight: 600;
+	margin-bottom: 10px;
+	flex: 1 1 auto;
+}
+.number__input {
+	display: flex;
+	justify-content: center;
+}
+.number__input input {
+	text-align: center;
+	width: 30px;
+	height: 35px;
+	border: none;
+	background-color: transparent;
+	line-height: 35px;
+	font-weight: 600;
+}
+
+
+
+/*Это для браузера Chrome:*/
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/*Это для браузера Firefox:*/
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+input[type="number"]:hover,
+input[type="number"]:focus {
+  -moz-appearance: number-input;
+}
+/*Для других*/
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+
+
+.number__button {
+	width: 35px;
+	height: 35px;
+	border-radius: 50%;
+	border: 1px solid #eaeaea;
+	background-color: #fff;
+	cursor: pointer;
+}
+
+
+
+
+
+
+.book__subtotal {
+	font-size: 30px;
+	font-weight: 600;
+	margin-bottom: 20px;
+}
+
+#price{
+	margin: 0 5px 0 20px;
+}
+
+#timeOfCleaning {
+	color: #f45e1f;
+}
+
+#hours {
+	color: #f45e1f;	
+}
+.book__cleaning {
+	margin-bottom: 5px;
+}
+.book__includes {
+	margin-bottom: 35px;
+}
+.book__user-contacts {
+	display: flex;
+	flex-direction: column;
+}
+
+
+
+
+
+.contacts__text {
+  font-size: 10px;
+  color: #f45e1f;
+  text-transform: uppercase;
+  line-height: 2.4;
+
+
+}
+
+.book__user-contacts input{
+	font-size: 20px;
+	display: block;
+	background-color: transparent;
+	border: none;
+	border-bottom: 2px solid #7d83a2;
+	line-height: 1.2em;
+	color: #fff;
+	margin-bottom: 15px;
+	padding-bottom: 5px;
+}
+
+.book__user-contacts input:last-child {
+	margin-bottom: 35px;
+}
+
+::-webkit-input-placeholder {
+	color:#fff;
+	font-size: 14px;;
+	opacity: 0.95;
+}
+
+::-moz-placeholder{
+	color:#fff;
+  	font-size: 14px;
+  	opacity: 0.95;	
+  }
+:-moz-placeholder{
+	color:#fff;
+  	font-size: 14px;
+  	opacity: 0.95;	
+ }
+:-ms-input-placeholder{
+	color:#fff;
+	font-size: 14px;
+	opacity: 0.95;
+}
+
+.book__submit {
+	color: #f45e1f;
+	font-size: 20px;
+	font-weight: 600;
+	background-color: transparent;
+	border: none;
+	background-image: url(../img/arrow.png);
+	background-position: right center;
+	background-repeat: no-repeat;
+	padding: 0 25px 0 0;
+	cursor: pointer;
+	margin-left: -45px;
+
+}
 @media(max-width: 1170px) {
 
 
@@ -446,7 +714,7 @@ header .container{
 	}
 }
 
-@media screen and (max-width: 1030px){
+@media screen and (max-width: 1030px) {
 
 
 	/*Header*/
@@ -456,7 +724,27 @@ header .container{
 	}
 }
 
-@media screen and (max-width: 860px){
+
+@media(max-width: 933px) {
+	.book .container {
+		flex-direction: column;
+		align-items: center;
+
+	}
+	.book__column {
+		margin-bottom: 30px;
+	}
+	.book__column:last-child {
+		/*transform: translate(-25px);*/
+		max-width: 100vw;
+		width: 100vw;
+		padding: 50px 0;
+		margin-left: -25px;
+	}
+}
+
+
+@media screen and (max-width: 860px) {
 
 
 	/*Header*/
@@ -654,6 +942,40 @@ header .container{
 		flex: 1 1 auto;
 		margin: 0 0 35px 0;
 	}
+
+
+	/*Book*/
+
+	.book__text {
+		max-width: 250px;
+	}
+	.type__radio {
+		flex-direction: column;
+	}
+
+	.type__radio label {
+		margin: 0 0 20px 0;
+	}
+
+	.type__radio label:last-child {
+		margin: 0;
+	}
+
+	.book__number {
+		max-width: 150px;
+	}
+
+	.number__item {
+		margin-bottom: 30px;
+	}
+
+	.number__item:last-child {
+		margin: 0;
+	}
+
+	.book__user-contacts input {
+		max-width: 80%;
+	}
 }
-}
+
 
