--- a/css/fonts.css
+++ b/css/fonts.css
@@ -35,11 +35,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?ah56w4');
-  src:  url('../fonts/icomoon.eot?ah56w4#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?ah56w4') format('truetype'),
-    url('../fonts/icomoon.woff?ah56w4') format('woff'),
-    url('../fonts/icomoon.svg?ah56w4#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?7wwgpz');
+  src:  url('../fonts/icomoon.eot?7wwgpz#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?7wwgpz') format('truetype'),
+    url('../fonts/icomoon.woff?7wwgpz') format('woff'),
+    url('../fonts/icomoon.svg?7wwgpz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -49,8 +49,8 @@
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
-  font-style: normal;
-  font-weight: normal;
+  /*font-style: normal;
+  font-weight: normal;*/
   font-variant: normal;
   text-transform: none;
   line-height: 1;
@@ -60,9 +60,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-map-marker-alt:before {
+  content: "\e901";
+}
+.icon-arrow:before {
+  content: "\e903";
+}
 .icon-house:before {
   content: "\e900";
 }
 .icon-commercial:before {
-  content: "\e901";
+  content: "\e902";
 }
+
