--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,6 @@ h4{
 
 a, a:hover, a:active{
 	text-decoration: none;
-	color: inherit;
 }
 
 .btn{
@@ -109,9 +108,14 @@ a, a:hover, a:active{
 	height: 45px;
 	text-align: center;
 	line-height: 45px;
+	border: 2px solid #fff9f6;
+	transition: all .2s ease;
 }
 
-
+.btn:hover {
+	background-color: transparent;
+	color: #fff;
+}
 /*Header*/
 	body {
 
@@ -127,6 +131,7 @@ header{
 	width: calc(100vw - 15px);
 	background-size: cover;
 	background-position: center;
+	padding-top: 5px;
 }
 
 header .container{
@@ -147,17 +152,80 @@ header .container{
 	top: 1px;
 	pointer-events: none;
 }
+.logo {
+	position: relative;
+}
+.logo:after{
+	content: "";
+	position: absolute;
+	background-color: #fff;
+	bottom: -2px;
+	height: 1px;
+	width: calc(100% + 10px);
+	left: -5px;
+	transform: translateY(-10px);
+	opacity: 0;
+	transition: all .2s ease;
+}
+.logo:hover:after {
+	opacity: 1;
+	transform: translateY(0);
+}
 
 .nav__list {
 	display: flex;
 	justify-content: space-between;
+	position: relative;
 }
+
+.nav__list::after {
+	content: "";
+	position: absolute;
+	width: calc(100% - 60px);
+	margin-left: 30px;
+	height: 1px;
+	bottom: -10px;
+	background-color: #fff;
+	opacity: 0.5;
+}
+
+.nav__item {
+	position: relative;
+	transition: all .2s ease;
+}
+
+.nav__item:hover {
+	color: #fff;
+}
+.nav__item:after {
+	content: "";
+	position: absolute;
+	background-color: #f45e1f;
+	bottom: -11px;
+	width: calc(100% - 46px);
+	transform: translateX(23px);
+	height: 0px;
+	opacity: 0;
+	left: 0;
+	z-index: 3;
+	transition: all .2s ease;
+
+}
+.nav__item:hover:after {
+		opacity: 1;
+		height: 3px;
+}
+
 .nav__link {
 	font-size: 15px;
 	font-weight: 600;
 	padding: 30px;
+	color: #eee;
 }
 
+	.btn-request:hover {
+		color: 
+	}
 .offer{
 	width: 700px;
 	margin-left: 6%;
@@ -181,9 +249,7 @@ header .container{
 .locations-btn{
 	display: inline-block;
 	margin-left: 25px;
-	background: transparent;
-	border: 1px solid #fff;
-	color: #fff;
+	margin-left: 5px;
 }
 
 .pin{
@@ -196,6 +262,7 @@ header .container{
 	width: 65%;
 	align-items: center;
 	margin-bottom: -2%;
+	color: #fff;
 }
 
 .learn:hover .learn__line{
@@ -206,7 +273,7 @@ header .container{
 	color: #eabe28;
 }
 
-.learn:hover .learn__arrow{
+.learn:hover .icon-arrow{
 	color: #eabe28;
 }
 .learn:hover .learn__circle{
@@ -218,6 +285,7 @@ header .container{
 	font-size: 12px;
 	font-weight: 600;
 	text-transform: uppercase;
+	transition: all .2s ease;
 }
 
 .learn__line {
@@ -226,6 +294,7 @@ header .container{
   	opacity: 0.4;
   	height: 1px;
   	width: 60%;
+  	transition: all .2s ease;
 }
 
 .learn__circle{
@@ -235,13 +304,15 @@ header .container{
 	border-radius: 50%;
 	align-items: center;
 	position: relative;
+	transition: all .2s ease;
 }
 
-.learn__arrow{
+.icon-arrow:before {
 	position: absolute;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
+	transition: all .2s ease;
 }
 
 .scroll{
@@ -328,6 +399,7 @@ header .container{
 	font-size: 13px;
 	align-self: flex-start;
 	line-height: 17px;
+	transition: all 0.01s ease;
 }
 
 .cleaning__btn:hover {
@@ -886,11 +958,6 @@ h2.footer__column__title {
 	flex: 1 1 auto;
 }
 
-.social::before {
-	content: "";
-	flex: 1 1 auto;
-}
-
 .footer__item:last-child {
 	margin: 0;
 }
@@ -904,6 +971,7 @@ h2.footer__column__title {
 }
 
 .footer__title__link {
+	color: #273164;;
 	padding: 15px;
 }
 .footer__link {
@@ -978,6 +1046,7 @@ h2.footer__column__title {
 		width: 100vw;
 		padding: 50px 0;
 		margin-left: -25px;
+		margin-bottom: 0;
 	}
 }
 
@@ -1056,6 +1125,7 @@ h2.footer__column__title {
 	  background-color: #ECEFF1;
 	  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
 	  border-right: 10px solid #f45e1f;
+	  overflow-x: hidden;
 	  overflow-y: scroll;
 	}
 	
@@ -1064,21 +1134,21 @@ h2.footer__column__title {
 		display: block;
 	}
 	/* элементы меню */
-	.nav__item {
+	.nav__link {
 		align-items: center;
 		width: 100%;
-		color: #555;
-		font-size: 16vh;
+		color: #000;
 		transition-duration: .25s;
+		display: block;
+		width: 100%;
+		height: 100%;
 	}
 	.nav__item:hover {
 	  background-color: #CFD8DC;
 	}
-	
-	.nav__link{
-		display: block;
-		width: 100%;
-		height: 100%;
+
+	.nav__item:hover:after {
+		display: none;
 	}
 	
 	#menu__toggle:checked ~ .menu__btn > span {
@@ -1154,6 +1224,32 @@ h2.footer__column__title {
 		opacity: 1;
 		height: 100%;
 		overflow-y: none;
+	}
+
+	.cleaning {
+		overflow-x: hidden;
+	}
+	/*margins*/
+	.book {
+		padding: 60px 0 0;
+		margin-bottom: 0px;
+	}
+
+	.testimonials {
+		padding: 30px;
+	}
+
+	.testimonials__title {
+		margin-bottom: 0;
+	}
+	.feedback {
+		padding-top: 0;
+		padding-bottom: 45px;
+	}
+
+	.column__container {
+		padding-bottom: 30px;
+		margin-bottom: 30px;
 	}
 
 }
@@ -1295,6 +1391,9 @@ h2.footer__column__title {
 	opacity: 0;
 }
 
+label._animate {
+	transition-duration: 0s;
+}
 ._animate-left {
 	transform: translateX(-100px);
 }
