--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 body{
 	font-family: "Avenir Next LT Pro", "Arial", sans-serif;
-	padding: 0 15px 0 0;
+	/*padding: 0 15px 0 0;*/
 	margin: 0;
 	letter-spacing: 0.02em;
 	font-size: 14px;
