--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ header{
 	background-image: url(../img/header-bg.jpg);
 	background-repeat: no-repeat;
 	background-color: #bbb;
-	height: 100vh;
+	min-height: 100vh;
 	width: 100vw;
 	background-size: cover;
 	background-position: center;
@@ -138,6 +138,7 @@ header .container{
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
+	min-height: 100vh;
 }
 
 .head{
@@ -1384,7 +1385,15 @@ h2.footer__column__title {
 	}
 }
 
+@media(max-height: 650px) {
+	.scroll {
+		display: none;
+	}
 
+	.learn {
+		margin-bottom: 10px;
+	}
+}
 
 ._animate {
 	transition: all 0.5s ease;
