--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,8 @@ header{
 	background-image: url(../img/header-bg.jpg);
 	background-repeat: no-repeat;
 	background-color: #bbb;
-	min-height: 100vh;
+	/*min-height: 100vh;*/
+	height: 900px;
 	width: 100vw;
 	background-size: cover;
 	background-position: center;
@@ -158,7 +159,8 @@ header .container{
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
-	min-height: 100vh;
+/*	min-height: 100vh;*/
+	height: 900px;
 }
 
 .head{
