--- a/css/style.css
+++ b/css/style.css
@@ -1453,4 +1453,6 @@ label._animate {
 ._animate-Active {
 	transform: translate(0);
 	opacity: 1;
+	transition-duration: 0s !important;
+	transition-delay: 0s !important;
 }
