--- a/css/style.css
+++ b/css/style.css
@@ -115,9 +115,7 @@ a, a:hover, a:active{
 .btn:hover {
 	background-color: transparent;
 	color: #fff;
-}
-
-/*Header*/
+}/*Header*/
 	body {
 
 		width: 100vw;
