--- a/css/style.css
+++ b/css/style.css
@@ -115,12 +115,13 @@ a, a:hover, a:active{
 .btn:hover {
 	background-color: transparent;
 	color: #fff;
-}/*Header*/
-	body {
+}
 
-		width: 100vw;
-		overflow-x: hidden;
-	}
+/*Header*/
+body {
+	width: 100vw;
+	overflow-x: hidden;
+}
 
 header{
 	background-image: url(../img/header-bg.jpg);
