--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 /*fonts*/
 
 @import "fonts.css";
@@ -30,6 +28,10 @@ body{
 	overflow-x: hidden;
 }
 
+section, form{
+	overflow-x: hidden;
+}
+
 .container{
 	margin: 0 auto;
 	padding: 0 25px;
@@ -39,7 +41,7 @@ body{
 }
 
 .div, p, form, input, a, span, button{
-	box-sizing: border-box;
+	/*box-sizing: border-box;*/
 }
 
 ul, li{
@@ -124,6 +126,27 @@ a, a:hover, a:active{
 		width: 100vw;
 		overflow-x: hidden;
 	}
+.layer0 {
+	width: 100vw;
+	height: 100vh;
+	pointer-events: none;
+	position: fixed;
+}
+
+.layer0._animate {
+	opacity: 1;
+	background-color: #fff;
+	transition-duration: .7s;
+}
+
+.layer0._animate-Active {
+	background-color: transparent;
+}
+/*Header*/
+body {
+	width: 100vw;
+	overflow-x: hidden;
+}
 
 header{
 	background-image: url(../img/header-bg.jpg);
@@ -174,6 +197,10 @@ header .container{
 	opacity: 1;
 	transform: translateY(0);
 }
+
+/*nav {
+	box-sizing: border-box;
+}*/
 
 .nav__list {
 	display: flex;
@@ -456,6 +483,7 @@ header .container{
 	background-color: #f6f7fb;
 	padding-bottom: 85px;
 	position: relative;
+	overflow-x: visible;
 }
 .become__content {
 	display: flex;
@@ -488,6 +516,7 @@ header .container{
 	-o-object-fit: cover;
 	   object-fit: cover;
 }
+
 .become__title {
 	margin-bottom: 20px;
 }
@@ -908,6 +937,10 @@ input[type=number]::-webkit-outer-spin-button {
 /*=================================================*/
 	/*Footer*/
 
+footer {
+	overflow-x: hidden;
+}
+
 .column__container {
 	display: flex;
 	justify-content: space-between;
@@ -1135,6 +1168,11 @@ h2.footer__column__title {
 	.nav__list{
 		flex: 1 1 auto;
 		display: block;
+	}
+
+	.nav__list._animate-top{
+		opacity: 1;
+		transform: none;
 	}
 	/* элементы меню */
 	.nav__link {
@@ -1421,6 +1459,6 @@ label._animate {
 }
 ._animate-Active {
 	transform: translateX(0);
+	transform: translate(0);
 	opacity: 1;
 }
->>>>>>> parent of 896589d (Final commit (I belive))
